parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     expression -> LPARENTH expression RPARENTH
Rule 2     expression -> expression PLUS expression
Rule 3     expression -> expression MINUS expression
Rule 4     expression -> MINUS expression
Rule 5     expression -> expression TIMES expression
Rule 6     expression -> expression DIVIDE expression
Rule 7     expression -> NUMBER
Rule 8     expression -> STRING
Rule 9     expression -> IDENTIFIER
Rule 10    statement -> IDENTIFIER EQUALS expression
Rule 11    statement -> expression
Rule 12    program -> program statement NEWLINE
Rule 13    program -> program statement
Rule 14    program -> statement NEWLINE
Rule 15    program -> statement
Rule 16    program -> program NEWLINE
Rule 17    program -> NEWLINE
Rule 18    expression -> LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
Rule 19    statement -> LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
Rule 20    expression -> IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
Rule 21    expression -> IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
Rule 22    expression -> IDENTIFIER LSQRBRACKET RSQRBRACKET
Rule 23    statement -> PRINTLN LSQRBRACKET arglist RSQRBRACKET
Rule 24    arglist -> arglist COMMA expression
Rule 25    arglist -> expression

Terminals, with rules where they appear

COMMA                : 24
DIVIDE               : 6
EQUALS               : 10
IDENTIFIER           : 9 10 20 21 22
LPARENTH             : 1
LSQRBRACKET          : 18 18 19 19 20 20 21 21 22 23
MINUS                : 3 4
NEWLINE              : 12 14 16 17
NUMBER               : 7
PLUS                 : 2
PRINTLN              : 23
RPARENTH             : 1
RSQRBRACKET          : 18 18 19 19 20 20 21 21 22 23
STRING               : 8
TIMES                : 5
error                : 

Nonterminals, with rules where they appear

arglist              : 23 24
expression           : 1 2 2 3 3 4 5 5 6 6 10 11 24 25
program              : 12 13 16 18 19 19 20 21 21 0
statement            : 12 13 14 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (12) program -> . program statement NEWLINE
    (13) program -> . program statement
    (14) program -> . statement NEWLINE
    (15) program -> . statement
    (16) program -> . program NEWLINE
    (17) program -> . NEWLINE
    (10) statement -> . IDENTIFIER EQUALS expression
    (11) statement -> . expression
    (19) statement -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (23) statement -> . PRINTLN LSQRBRACKET arglist RSQRBRACKET
    (1) expression -> . LPARENTH expression RPARENTH
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . IDENTIFIER
    (18) expression -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (20) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> . IDENTIFIER LSQRBRACKET RSQRBRACKET

    NEWLINE         shift and go to state 3
    IDENTIFIER      shift and go to state 4
    LSQRBRACKET     shift and go to state 6
    PRINTLN         shift and go to state 7
    LPARENTH        shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11

    program                        shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 5

state 1

    (0) S' -> program .
    (12) program -> program . statement NEWLINE
    (13) program -> program . statement
    (16) program -> program . NEWLINE
    (10) statement -> . IDENTIFIER EQUALS expression
    (11) statement -> . expression
    (19) statement -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (23) statement -> . PRINTLN LSQRBRACKET arglist RSQRBRACKET
    (1) expression -> . LPARENTH expression RPARENTH
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . IDENTIFIER
    (18) expression -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (20) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> . IDENTIFIER LSQRBRACKET RSQRBRACKET

    NEWLINE         shift and go to state 13
    IDENTIFIER      shift and go to state 4
    LSQRBRACKET     shift and go to state 6
    PRINTLN         shift and go to state 7
    LPARENTH        shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11

    statement                      shift and go to state 12
    expression                     shift and go to state 5

state 2

    (14) program -> statement . NEWLINE
    (15) program -> statement .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 14
    IDENTIFIER      reduce using rule 15 (program -> statement .)
    LSQRBRACKET     reduce using rule 15 (program -> statement .)
    PRINTLN         reduce using rule 15 (program -> statement .)
    LPARENTH        reduce using rule 15 (program -> statement .)
    MINUS           reduce using rule 15 (program -> statement .)
    NUMBER          reduce using rule 15 (program -> statement .)
    STRING          reduce using rule 15 (program -> statement .)
    $end            reduce using rule 15 (program -> statement .)
    RSQRBRACKET     reduce using rule 15 (program -> statement .)

  ! NEWLINE         [ reduce using rule 15 (program -> statement .) ]


state 3

    (17) program -> NEWLINE .

    NEWLINE         reduce using rule 17 (program -> NEWLINE .)
    IDENTIFIER      reduce using rule 17 (program -> NEWLINE .)
    LSQRBRACKET     reduce using rule 17 (program -> NEWLINE .)
    PRINTLN         reduce using rule 17 (program -> NEWLINE .)
    LPARENTH        reduce using rule 17 (program -> NEWLINE .)
    MINUS           reduce using rule 17 (program -> NEWLINE .)
    NUMBER          reduce using rule 17 (program -> NEWLINE .)
    STRING          reduce using rule 17 (program -> NEWLINE .)
    $end            reduce using rule 17 (program -> NEWLINE .)
    RSQRBRACKET     reduce using rule 17 (program -> NEWLINE .)


state 4

    (10) statement -> IDENTIFIER . EQUALS expression
    (9) expression -> IDENTIFIER .
    (20) expression -> IDENTIFIER . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> IDENTIFIER . LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> IDENTIFIER . LSQRBRACKET RSQRBRACKET

  ! shift/reduce conflict for LSQRBRACKET resolved as shift
    EQUALS          shift and go to state 15
    PLUS            reduce using rule 9 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 9 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 9 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 9 (expression -> IDENTIFIER .)
    NEWLINE         reduce using rule 9 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 9 (expression -> IDENTIFIER .)
    PRINTLN         reduce using rule 9 (expression -> IDENTIFIER .)
    LPARENTH        reduce using rule 9 (expression -> IDENTIFIER .)
    NUMBER          reduce using rule 9 (expression -> IDENTIFIER .)
    STRING          reduce using rule 9 (expression -> IDENTIFIER .)
    $end            reduce using rule 9 (expression -> IDENTIFIER .)
    RSQRBRACKET     reduce using rule 9 (expression -> IDENTIFIER .)
    LSQRBRACKET     shift and go to state 16

  ! LSQRBRACKET     [ reduce using rule 9 (expression -> IDENTIFIER .) ]


state 5

    (11) statement -> expression .
    (2) expression -> expression . PLUS expression
    (3) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for MINUS resolved as shift
    NEWLINE         reduce using rule 11 (statement -> expression .)
    IDENTIFIER      reduce using rule 11 (statement -> expression .)
    LSQRBRACKET     reduce using rule 11 (statement -> expression .)
    PRINTLN         reduce using rule 11 (statement -> expression .)
    LPARENTH        reduce using rule 11 (statement -> expression .)
    NUMBER          reduce using rule 11 (statement -> expression .)
    STRING          reduce using rule 11 (statement -> expression .)
    $end            reduce using rule 11 (statement -> expression .)
    RSQRBRACKET     reduce using rule 11 (statement -> expression .)
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20

  ! MINUS           [ reduce using rule 11 (statement -> expression .) ]


state 6

    (19) statement -> LSQRBRACKET . LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (18) expression -> LSQRBRACKET . LSQRBRACKET program RSQRBRACKET RSQRBRACKET

    LSQRBRACKET     shift and go to state 21


state 7

    (23) statement -> PRINTLN . LSQRBRACKET arglist RSQRBRACKET

    LSQRBRACKET     shift and go to state 22


state 8

    (1) expression -> LPARENTH . expression RPARENTH
    (1) expression -> . LPARENTH expression RPARENTH
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . IDENTIFIER
    (18) expression -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (20) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> . IDENTIFIER LSQRBRACKET RSQRBRACKET

    LPARENTH        shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 24
    LSQRBRACKET     shift and go to state 25

    expression                     shift and go to state 23

state 9

    (4) expression -> MINUS . expression
    (1) expression -> . LPARENTH expression RPARENTH
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . IDENTIFIER
    (18) expression -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (20) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> . IDENTIFIER LSQRBRACKET RSQRBRACKET

    LPARENTH        shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 24
    LSQRBRACKET     shift and go to state 25

    expression                     shift and go to state 26

state 10

    (7) expression -> NUMBER .

    PLUS            reduce using rule 7 (expression -> NUMBER .)
    MINUS           reduce using rule 7 (expression -> NUMBER .)
    TIMES           reduce using rule 7 (expression -> NUMBER .)
    DIVIDE          reduce using rule 7 (expression -> NUMBER .)
    NEWLINE         reduce using rule 7 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 7 (expression -> NUMBER .)
    LSQRBRACKET     reduce using rule 7 (expression -> NUMBER .)
    PRINTLN         reduce using rule 7 (expression -> NUMBER .)
    LPARENTH        reduce using rule 7 (expression -> NUMBER .)
    NUMBER          reduce using rule 7 (expression -> NUMBER .)
    STRING          reduce using rule 7 (expression -> NUMBER .)
    $end            reduce using rule 7 (expression -> NUMBER .)
    RPARENTH        reduce using rule 7 (expression -> NUMBER .)
    RSQRBRACKET     reduce using rule 7 (expression -> NUMBER .)
    COMMA           reduce using rule 7 (expression -> NUMBER .)


state 11

    (8) expression -> STRING .

    PLUS            reduce using rule 8 (expression -> STRING .)
    MINUS           reduce using rule 8 (expression -> STRING .)
    TIMES           reduce using rule 8 (expression -> STRING .)
    DIVIDE          reduce using rule 8 (expression -> STRING .)
    NEWLINE         reduce using rule 8 (expression -> STRING .)
    IDENTIFIER      reduce using rule 8 (expression -> STRING .)
    LSQRBRACKET     reduce using rule 8 (expression -> STRING .)
    PRINTLN         reduce using rule 8 (expression -> STRING .)
    LPARENTH        reduce using rule 8 (expression -> STRING .)
    NUMBER          reduce using rule 8 (expression -> STRING .)
    STRING          reduce using rule 8 (expression -> STRING .)
    $end            reduce using rule 8 (expression -> STRING .)
    RPARENTH        reduce using rule 8 (expression -> STRING .)
    RSQRBRACKET     reduce using rule 8 (expression -> STRING .)
    COMMA           reduce using rule 8 (expression -> STRING .)


state 12

    (12) program -> program statement . NEWLINE
    (13) program -> program statement .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 27
    IDENTIFIER      reduce using rule 13 (program -> program statement .)
    LSQRBRACKET     reduce using rule 13 (program -> program statement .)
    PRINTLN         reduce using rule 13 (program -> program statement .)
    LPARENTH        reduce using rule 13 (program -> program statement .)
    MINUS           reduce using rule 13 (program -> program statement .)
    NUMBER          reduce using rule 13 (program -> program statement .)
    STRING          reduce using rule 13 (program -> program statement .)
    $end            reduce using rule 13 (program -> program statement .)
    RSQRBRACKET     reduce using rule 13 (program -> program statement .)

  ! NEWLINE         [ reduce using rule 13 (program -> program statement .) ]


state 13

    (16) program -> program NEWLINE .

    NEWLINE         reduce using rule 16 (program -> program NEWLINE .)
    IDENTIFIER      reduce using rule 16 (program -> program NEWLINE .)
    LSQRBRACKET     reduce using rule 16 (program -> program NEWLINE .)
    PRINTLN         reduce using rule 16 (program -> program NEWLINE .)
    LPARENTH        reduce using rule 16 (program -> program NEWLINE .)
    MINUS           reduce using rule 16 (program -> program NEWLINE .)
    NUMBER          reduce using rule 16 (program -> program NEWLINE .)
    STRING          reduce using rule 16 (program -> program NEWLINE .)
    $end            reduce using rule 16 (program -> program NEWLINE .)
    RSQRBRACKET     reduce using rule 16 (program -> program NEWLINE .)


state 14

    (14) program -> statement NEWLINE .

    NEWLINE         reduce using rule 14 (program -> statement NEWLINE .)
    IDENTIFIER      reduce using rule 14 (program -> statement NEWLINE .)
    LSQRBRACKET     reduce using rule 14 (program -> statement NEWLINE .)
    PRINTLN         reduce using rule 14 (program -> statement NEWLINE .)
    LPARENTH        reduce using rule 14 (program -> statement NEWLINE .)
    MINUS           reduce using rule 14 (program -> statement NEWLINE .)
    NUMBER          reduce using rule 14 (program -> statement NEWLINE .)
    STRING          reduce using rule 14 (program -> statement NEWLINE .)
    $end            reduce using rule 14 (program -> statement NEWLINE .)
    RSQRBRACKET     reduce using rule 14 (program -> statement NEWLINE .)


state 15

    (10) statement -> IDENTIFIER EQUALS . expression
    (1) expression -> . LPARENTH expression RPARENTH
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . IDENTIFIER
    (18) expression -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (20) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> . IDENTIFIER LSQRBRACKET RSQRBRACKET

    LPARENTH        shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 24
    LSQRBRACKET     shift and go to state 25

    expression                     shift and go to state 28

state 16

    (20) expression -> IDENTIFIER LSQRBRACKET . LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> IDENTIFIER LSQRBRACKET . LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> IDENTIFIER LSQRBRACKET . RSQRBRACKET

    LSQRBRACKET     shift and go to state 29
    RSQRBRACKET     shift and go to state 30


state 17

    (2) expression -> expression PLUS . expression
    (1) expression -> . LPARENTH expression RPARENTH
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . IDENTIFIER
    (18) expression -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (20) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> . IDENTIFIER LSQRBRACKET RSQRBRACKET

    LPARENTH        shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 24
    LSQRBRACKET     shift and go to state 25

    expression                     shift and go to state 31

state 18

    (3) expression -> expression MINUS . expression
    (1) expression -> . LPARENTH expression RPARENTH
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . IDENTIFIER
    (18) expression -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (20) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> . IDENTIFIER LSQRBRACKET RSQRBRACKET

    LPARENTH        shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 24
    LSQRBRACKET     shift and go to state 25

    expression                     shift and go to state 32

state 19

    (5) expression -> expression TIMES . expression
    (1) expression -> . LPARENTH expression RPARENTH
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . IDENTIFIER
    (18) expression -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (20) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> . IDENTIFIER LSQRBRACKET RSQRBRACKET

    LPARENTH        shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 24
    LSQRBRACKET     shift and go to state 25

    expression                     shift and go to state 33

state 20

    (6) expression -> expression DIVIDE . expression
    (1) expression -> . LPARENTH expression RPARENTH
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . IDENTIFIER
    (18) expression -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (20) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> . IDENTIFIER LSQRBRACKET RSQRBRACKET

    LPARENTH        shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 24
    LSQRBRACKET     shift and go to state 25

    expression                     shift and go to state 34

state 21

    (19) statement -> LSQRBRACKET LSQRBRACKET . program RSQRBRACKET program RSQRBRACKET
    (18) expression -> LSQRBRACKET LSQRBRACKET . program RSQRBRACKET RSQRBRACKET
    (12) program -> . program statement NEWLINE
    (13) program -> . program statement
    (14) program -> . statement NEWLINE
    (15) program -> . statement
    (16) program -> . program NEWLINE
    (17) program -> . NEWLINE
    (10) statement -> . IDENTIFIER EQUALS expression
    (11) statement -> . expression
    (19) statement -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (23) statement -> . PRINTLN LSQRBRACKET arglist RSQRBRACKET
    (1) expression -> . LPARENTH expression RPARENTH
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . IDENTIFIER
    (18) expression -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (20) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> . IDENTIFIER LSQRBRACKET RSQRBRACKET

    NEWLINE         shift and go to state 3
    IDENTIFIER      shift and go to state 4
    LSQRBRACKET     shift and go to state 6
    PRINTLN         shift and go to state 7
    LPARENTH        shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11

    program                        shift and go to state 35
    statement                      shift and go to state 2
    expression                     shift and go to state 5

state 22

    (23) statement -> PRINTLN LSQRBRACKET . arglist RSQRBRACKET
    (24) arglist -> . arglist COMMA expression
    (25) arglist -> . expression
    (1) expression -> . LPARENTH expression RPARENTH
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . IDENTIFIER
    (18) expression -> . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (20) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> . IDENTIFIER LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> . IDENTIFIER LSQRBRACKET RSQRBRACKET

    LPARENTH        shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 24
    LSQRBRACKET     shift and go to state 25

    arglist                        shift and go to state 36
    expression                     shift and go to state 37

state 23

    (1) expression -> LPARENTH expression . RPARENTH
    (2) expression -> expression . PLUS expression
    (3) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression

    RPARENTH        shift and go to state 38
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20


state 24

    (9) expression -> IDENTIFIER .
    (20) expression -> IDENTIFIER . LSQRBRACKET LSQRBRACKET program RSQRBRACKET RSQRBRACKET
    (21) expression -> IDENTIFIER . LSQRBRACKET LSQRBRACKET program RSQRBRACKET program RSQRBRACKET
    (22) expression -> IDENTIFIER . LSQRBRACKET RSQRBRACKET

  ! shift/reduce conflict for LSQRBRACKET resolved as shift
    RPARENTH        reduce using rule 9 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 9 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 9 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 9 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 9 (expression -> IDENTIFIER .)
    NEWLINE         reduce using rule 9 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 9 (expression -> IDENTIFIER .)
    PRINTLN         reduce using rule 9 (expression -> IDENTIFIER .)
    LPARENTH        reduce using rule 9 (expression -> IDENTIFIER .)
    NUMBER          reduce using rule 9 (expression -> IDENTIFIER .)
    STRING          reduce using rule 9 (expression -> IDENTIFIER .)
    $end            reduce using rule 9 (expression -> IDENTIFIER .)
    RSQRBRACKET     reduce using rule 9 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 9 (expression -> IDENTIFIER .)
    LSQRBRACKET     shift and go to state 16

  ! LSQRBRACKET     [ reduce using rule 9 (expression -> IDENTIFIER .) ]


state 25

    (18) expression -> LSQRBRACKET . LSQRBRACKET program RSQRBRACKET RSQRBRACKET

    LSQRBRACKET     shift and go to state 39


state 26

    (4) expression -> MINUS expression .
    (2) expression -> expression . PLUS expression
    (3) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression
